--- a/frontend/src/app/components/capa-bibliografia/capa-bibliografia.html
+++ b/frontend/src/app/components/capa-bibliografia/capa-bibliografia.html
@@ -17,6 +17,9 @@
       <button mat-stroked-button (click)="navigateTo(conceitosPath)" *ngIf="conceitosPath">
         <mat-icon>category</mat-icon> Conceitos
       </button>
+      <button mat-stroked-button (click)="navigateTo(mapaMentalPath)" *ngIf="mapaMentalPath">
+        <mat-icon>account_tree</mat-icon> Mapa Mental
+      </button>
       <button mat-stroked-button (click)="navigateTo(flashcardsPath)" *ngIf="flashcardsPath">
         <mat-icon>style</mat-icon> Flashcards
       </button>
