--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
@@ -10,6 +10,7 @@
   [markdownPath]="markdownPath"
   [basePath]="basePath"
   [conceitosPath]="conceitosPath"
+  [mapaMentalPath]="mapaMentalPath"
   [flashcardsPath]="flashcardsPath"
   [mediaPath]="mediaPath"
   [perguntasPath]="perguntasPath">
