--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -11,6 +11,11 @@
       <mat-icon>{{ isTopMenuExpanded() ? 'close' : 'menu' }}</mat-icon>
     </button>
     <div class="top-header-title clickable" (click)="navigateHome()" tabindex="0" role="link" aria-label="Ir para Home">
+      <img 
+        src="/assets/img/svg/brazil.png" 
+        alt="Bandeira do Brasil" 
+        class="brazil-flag-mobile"
+        aria-hidden="true">
       <span class="title">CEMOS</span>
       <span class="subtitle">2028</span>
     </div>
